[gd_scene load_steps=33 format=3 uid="uid://hqomjpfdfmm"]

[ext_resource type="Script" path="res://scripts/aim_debug.gd" id="2_7qv22"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="2_qaxw3"]
[ext_resource type="AudioStream" uid="uid://bvevvqrym7vso" path="res://sounds/1911.wav" id="3_1u8d1"]
[ext_resource type="Texture2D" uid="uid://b0xi6mvwhqlx1" path="res://images/tarrein.png" id="3_4ba83"]
[ext_resource type="ArrayMesh" uid="uid://dk44d8yugvva2" path="res://models/tarrein.res" id="4_m82ig"]
[ext_resource type="AudioStream" uid="uid://dt7tpinjrm02q" path="res://sounds/ak47.wav" id="4_x3qao"]
[ext_resource type="Texture2D" uid="uid://dkkxjg1jhf3um" path="res://images/floor.png" id="5_8p5qq"]
[ext_resource type="AudioStream" uid="uid://bn20c3hm3eicq" path="res://sounds/nova.wav" id="5_or7md"]
[ext_resource type="AudioStream" uid="uid://biihma5ra0t1b" path="res://sounds/q009s/weapswitch.ogg" id="6_csrd7"]
[ext_resource type="AudioStream" uid="uid://cnp5rnuft5d37" path="res://sounds/hitmarker2.wav" id="7_c3ltq"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="10_66i0h"]
[ext_resource type="Shader" path="res://shaders/particle.gdshader" id="10_yxt3l"]

[sub_resource type="GDScript" id="GDScript_8yide"]
script/source = "extends Node3D

"

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_flfsq"]
rayleigh_coefficient = 1.4
rayleigh_color = Color(0, 0.435294, 0.6, 1)
mie_coefficient = 0.01
mie_color = Color(1, 0, 0.698039, 1)
ground_color = Color(0.0823529, 0.0705882, 0.101961, 1)

[sub_resource type="Sky" id="Sky_3sxpi"]
sky_material = SubResource("PhysicalSkyMaterial_flfsq")

[sub_resource type="Environment" id="Environment_jyxof"]
background_mode = 2
background_color = Color(0.141176, 0.12549, 0.176471, 1)
sky = SubResource("Sky_3sxpi")
ssao_enabled = true
ssao_intensity = 4.0
ssil_enabled = true
fog_enabled = true
fog_light_color = Color(0.286275, 0.435294, 0.607843, 1)
fog_light_energy = 0.15
fog_sun_scatter = 0.05
fog_density = 0.005
fog_sky_affect = 0.5
fog_height_density = 0.05
volumetric_fog_density = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_trxi3"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.25098)

[sub_resource type="QuadMesh" id="QuadMesh_3tmvj"]
size = Vector2(0.01, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_clxgu"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.290196, 0.709804, 1)

[sub_resource type="SphereMesh" id="SphereMesh_s1sdd"]
radius = 10.0
height = 20.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7e3mn"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.815686, 0.290196, 0.709804, 0.156863)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_07nfl"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.815686, 0.290196, 0.709804, 0.0156863)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_knf5u"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.815686, 0.290196, 0.709804, 0.00784314)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_by7c5"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.729412, 0.85098, 1, 1)
albedo_texture = ExtResource("5_8p5qq")

[sub_resource type="PlaneMesh" id="PlaneMesh_dd0dd"]
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ah08m"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.529412, 0.6, 1, 0.482353)
albedo_texture = ExtResource("5_8p5qq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sxoht"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.466667, 0.482353, 1, 0.270588)
albedo_texture = ExtResource("5_8p5qq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjat7"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.478431, 0.4, 1, 0.141176)
albedo_texture = ExtResource("5_8p5qq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_llnxm"]
render_priority = 0
shader = ExtResource("10_yxt3l")
shader_parameter/color = Color(1, 0.960784, 0.85098, 1)
shader_parameter/light_affect = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_gd112"]
material = SubResource("ShaderMaterial_llnxm")
size = Vector2(0.02, 0.02)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th3mv"]
specular_mode = 2
albedo_texture = ExtResource("3_4ba83")
emission_enabled = true
emission_energy_multiplier = 0.33
emission_texture = ExtResource("3_4ba83")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_diny8"]

[node name="MainScene" type="Node3D"]
script = SubResource("GDScript_8yide")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyxof")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, -7.6194e-09, 8.70901e-08, 0, 0.996195, 0.0871557, -8.74228e-08, 0.0871557, -0.996195, 0, 10.59, -26.5896)
light_color = Color(1, 0, 0.6, 1)
light_angular_distance = 1.0
light_cull_mask = 4294967263
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73614, 0)
script = ExtResource("2_qaxw3")

[node name="AimDebugRoot" type="Node3D" parent="Camera3D"]
top_level = true
script = ExtResource("2_7qv22")

[node name="AimDebug" type="MeshInstance3D" parent="Camera3D/AimDebugRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
material_override = SubResource("StandardMaterial3D_trxi3")
mesh = SubResource("QuadMesh_3tmvj")
skeleton = NodePath("../..")

[node name="AudioListener3D" type="AudioListener3D" parent="Camera3D"]

[node name="PistolAudio" type="AudioStreamPlayer3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.120905, -0.371764)
stream = ExtResource("3_1u8d1")
volume_db = -6.0
pitch_scale = 1.2

[node name="RifleAudio" type="AudioStreamPlayer3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.120905, -0.371764)
stream = ExtResource("4_x3qao")
volume_db = -5.0

[node name="ShotgunAudio" type="AudioStreamPlayer3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.120905, -0.371764)
stream = ExtResource("5_or7md")
volume_db = -5.0
pitch_scale = 0.9

[node name="SwitchWeaponAudio" type="AudioStreamPlayer" parent="Camera3D"]
stream = ExtResource("6_csrd7")
volume_db = -15.0

[node name="HitMarkAudio" type="AudioStreamPlayer" parent="Camera3D"]
stream = ExtResource("7_c3ltq")
volume_db = -10.0

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 2

[node name="World" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.795243, 0)

[node name="Sun" type="MeshInstance3D" parent="World"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -200)
material_override = SubResource("StandardMaterial3D_clxgu")
cast_shadow = 0
mesh = SubResource("SphereMesh_s1sdd")

[node name="Glow1" type="MeshInstance3D" parent="World/Sun"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_7e3mn")
cast_shadow = 0
mesh = SubResource("SphereMesh_s1sdd")
skeleton = NodePath("../..")

[node name="Glow2" type="MeshInstance3D" parent="World/Sun"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_07nfl")
cast_shadow = 0
mesh = SubResource("SphereMesh_s1sdd")
skeleton = NodePath("../..")

[node name="Glow3" type="MeshInstance3D" parent="World/Sun"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -10.6831)
material_override = SubResource("StandardMaterial3D_knf5u")
cast_shadow = 0
mesh = SubResource("SphereMesh_s1sdd")
skeleton = NodePath("../..")

[node name="Floor" type="MeshInstance3D" parent="World"]
material_override = SubResource("StandardMaterial3D_by7c5")
mesh = SubResource("PlaneMesh_dd0dd")

[node name="Glow1" type="MeshInstance3D" parent="World/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
material_override = SubResource("StandardMaterial3D_ah08m")
mesh = SubResource("PlaneMesh_dd0dd")

[node name="Glow2" type="MeshInstance3D" parent="World/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0)
material_override = SubResource("StandardMaterial3D_sxoht")
mesh = SubResource("PlaneMesh_dd0dd")
skeleton = NodePath("../Glow1")

[node name="Glow3" type="MeshInstance3D" parent="World/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0599999, 0)
material_override = SubResource("StandardMaterial3D_xjat7")
mesh = SubResource("PlaneMesh_dd0dd")
skeleton = NodePath("../Glow2")

[node name="CPUParticles3D" type="CPUParticles3D" parent="World"]
transform = Transform3D(0.722714, 0, 0.691147, 0, 1, 0, -0.691147, 0, 0.722714, 0.295369, -0.479998, 0.0253029)
visible = false
layers = 32
amount = 1000
mesh = SubResource("QuadMesh_gd112")
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 1.0
emission_ring_radius = 4.0
emission_ring_inner_radius = 1.5
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.5
damping_min = 0.1
damping_max = 0.1

[node name="OmniLight3D" type="OmniLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.167426, 0)
light_energy = 4.0
omni_range = 4.10669

[node name="OmniLight3D2" type="OmniLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.167426, 0)
light_color = Color(0.54902, 0.513726, 1, 1)
light_energy = 0.5
omni_range = 8.43046

[node name="OmniLight3D3" type="OmniLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.167426, 0)
light_color = Color(0.286275, 0, 1, 1)
omni_range = 11.6855

[node name="Mountains" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55649, 0)
collision_mask = 3
metadata/_edit_group_ = true

[node name="Tarrein" type="MeshInstance3D" parent="World/Mountains"]
material_override = SubResource("StandardMaterial3D_th3mv")
cast_shadow = 2
mesh = ExtResource("4_m82ig")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Mountains"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, -0.883906, 0)
shape = SubResource("WorldBoundaryShape3D_diny8")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
script = ExtResource("10_66i0h")

[node name="ColorRect" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="ShakeLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[s] toggle shake : enabled"

[node name="RecoilLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[r] toggle recoil : enabled"

[node name="HudLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[h] toggle hud shake : enabled"

[node name="MuteLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[m] toggle audio : enabled"

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="FireLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[left mouse] shoot"

[node name="SensLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[up] [down] shange sensitivity : 1"

[node name="WeaponLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "[1] [2] [3] equip weapon : rifle"
